#（1）把文件夹下的cpp文件名字添加到SRC_List
AUX_SOURCE_DIRECTORY(. SRC_LIST)
AUX_SOURCE_DIRECTORY(../Framework SRC_LIST)
#（2）添加一个可执行的文件
ADD_EXECUTABLE(RookieRenderer ${SRC_LIST})
#MESSAGE(STATUS ${SRC_LIST})
#（3）设置可执行的文件 放在哪个目录
SET(EXECUTABLE_OUTPUT_PATH ${PROJECT_BINARY_DIR}/bin)
INCLUDE_DIRECTORIES(../Framework)

LINK_DIRECTORIES(/Framework)
